2003-07-29  Sam Steingold  <sds@gnu.org>

	* genclisph.d (to_time_t_) [UNIX_CYGWIN32]: export
	* modules/dirkey/dirkey.c (to_time_t_) [UNIX_CYGWIN32]: moved to...
	* unixaux.d (to_time_t_) [UNIX_CYGWIN32]: here

2003-07-29  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): when non-interactive, guard LOAD for "-i" with
	SYS::BATCHMODE-ERRORS to avoid infinite loop on error

2003-07-28  Sam Steingold  <sds@gnu.org>

	pushSTACK(listof()) and STACK_1=listof() are illegal because
	listof() (and vectorof() &c) modify the STACK,
	so the whole expression becomes undefined!
	* control.d (SET): avoid undefined expressions
	* array.d (test_displaced, ADJUST-ARRAY): ditto
	* eval.d (interpret_bytecode_): ditto
	* pathname.d (directory_search_scandir): ditto
	* socket.d (SOCKET-SERVICE-PORT): ditto

2003-07-28  Stefan Kain  <stefan.kain@freenet.de>

	* flo_rest.d: translated all comments

2003-07-28  Sam Steingold  <sds@gnu.org>

	* pathname.d (directory_search) [WIN32_NATIVE]: save some consing
	(directory_search_scandir) [WIN32_NATIVE]: fixed a GC-safety bug:
	use O(lnk_string) instead of allocating a new string each time
	* constobj.d (lnk_string) [WIN32_NATIVE]: new string

2003-07-28  Sam Steingold  <sds@gnu.org>

	* misc.d (clisp_setenv) [WIN32_NATIVE]: use SetEnvironmentVariable()
	(GETENV) [WIN32_NATIVE]: use GetEnvironmentStrings() and
	FreeEnvironmentStrings() instead of the fictitious `environ' global
	(push_envar): new function, extracted from GETENV

2003-07-28  Sam Steingold  <sds@gnu.org>

	* encoding.d, stream.d, socket.d, misc.d, win32aux.d:
	fixed g++/mingw compilation

2003-07-27  Sam Steingold  <sds@gnu.org>

	* genclisph.d, encoding.d (cstombs_f, cslen_f) [!UNICODE]: macros
	* modules/dirkey/dirkey.c: undef UNICODE before including clisp.h;
	no need for *_encoding without CLISP_UNICODE
	* modules/syscalls/calls.c: define WINVER before including clisp.h;
	no need for *_encoding without CLISP_UNICODE

2003-07-27  Sam Steingold  <sds@gnu.org>
